<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="action_menu">Action Menu</string>
    <string name="app_name">ODK Clinic</string>
    <string name="app_version">1.1.4</string>
    <string name="auth">App Login</string>
    <string name="barcode_error">Barcode Scanner not installed.</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_download">Cancel Download</string>
    <string name="change_code">Change Security Code</string>
    <string name="change_password">Change Password</string>
    <string name="change_provider">Change Provider</string>
    <string name="change_saved_search">Change Cohort or Search ID</string>
    <string name="change_server">Change URL</string>
    <string name="change_username">Change Username</string>
    <string name="connecting_server">Connecting &#8230;</string>
    <string name="default_info">http://opendatakit.org</string>
    <string name="default_password">test</string>
    <string name="default_server">http://rwinkwavu.cs.washington.edu:8081/openmrs</string>
    <string name="default_username">admin</string>
    <string name="delete_form">Delete Form</string>
    <string name="delete_form_successful">%s deleted!</string>
    <string name="download">Download</string>
    <string name="download_patients">Download Patients</string>
    <string name="download_selected">Download Selected</string>
    <string name="downloading">Downloading %s&#8230;</string>
    <string name="please_wait">Please wait a few moments.</string>
    <string name="error_delete_form">Error: Cannot delete %s</string>
    <string name="error_form_find">Error: Try getting forms.</string> 
    <string name="error_form_load">Error: Cannot load form. Try re-downloading it.</string>  
    <string name="error_login_code">Error: Incorrect CODE.</string>
    <string name="error_odk_collect">Error: ODK Collect not installed.</string>
    <string name="error_initialize_odk_collect">Error: ODK Collect not initialized.</string>
    <string name="error_storage">Error: SD card not ready.</string>
    <string name="edit_form">Edit Form</string>
    <string name="fill_patient_forms">Fill Patient Forms</string>
    <string name="filled_forms">Filled Forms</string>
    <string name="finding_patient">Finding patients&#8230;</string>
    <string name="go_back">Go Back</string>
    <string name="initial_setup_info">Initial setup: Enter the default security code</string>
    <string name="invalid_code">Invalid Code</string>
    <string name="invalid_name">Invalid patient name. Use [Given Middle Family]</string>
    <string name="list_patients">Patients List</string>
    <string name="new_patient">New Patient</string>
    <string name="new_patient_hint">Enter patient name</string>
    <string name="no_cohort">No cohorts. Try refreshing.</string>
    <string name="no_filled_forms">No filled forms to edit or upload!</string>
    <string name="no_form_to_fill">No forms. Go back and get forms</string>
    <string name="no_forms">You curently have no forms.</string>
    <string name="no_form_to_download">No forms in this server.</string>
    <string name="no_patients">No patients found. Try refresh patients.</string>
    <string name="no_select_error">Sorry, you have not selected any patients!</string>
    <string name="odk">Open Data Kit</string>
    <string name="openmrs">OpenMRS</string>
    <string name="openmrs_forms">OpenMRS Forms</string>
    <string name="password">Password</string>
    <string name="provider">Provider</string>
    <string name="refresh">Refresh</string>
    <string name="refresh_forms">Refresh Forms</string>
    <string name="saved_search">Cohort or Search ID</string>
    <string name="saved_search_hint">Use Saved Searches instead of Cohorts</string>
    <string name="search_hint">Name or ID</string>
    <string name="search_patient">Search Patient</string>
    <string name="security_code">Security Code</string>
    <string name="select_cohort">Select Cohort</string>
    <string name="select_forms">Select Forms</string>
    <string name="server_url">URL</string>
    <string name="server_preferences">Change Settings</string>
    <string name="show_patient">Show Patient</string>
    <string name="toggle_selected">Toggle All</string>
    <string name="update_list">Update List</string>
    <string name="upload_all_successful">%s forms(s) uploaded successfully.</string>
    <string name="upload_forms">Upload Forms</string>
    <string name="upload_some_failed">Sorry, %s forms(s) failed to upload!</string>
    <string name="uploading_forms">Uploading Forms&#8230;</string>
    <string name="username">Username</string>
    <string name="use_saved_search">Use Saved Searches</string>
    <string name="view_patient">View Patient</string>
    <string name="view_observation">View Observation</string>
    <string name="xform_parse_error">Xform parse error</string>
</resources>