<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:layout_alignParentTop="true">
    
	<LinearLayout
        android:id="@+id/formsholder"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:orientation="vertical" >
	    
		<ListView android:id="@android:id/list"
		      android:layout_width="wrap_content"
		      android:layout_height="wrap_content"
		      android:layout_above="@+id/buttonholder"
		      android:layout_alignParentTop="true"/>
	
		<TextView
		    android:id="@android:id/empty"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:text="@string/no_filled_forms"
		    android:textSize="19dp"
		    android:paddingLeft="20dp"
		    android:paddingRight="20dp"
		    android:gravity="center"
		    android:background="@drawable/white"
		    android:textColor="@drawable/black" />
	</LinearLayout>
	
	<LinearLayout
	    android:id="@+id/buttonholder"
		android:layout_width="fill_parent"
		android:layout_height="70dip"
		android:orientation="horizontal"
		android:layout_alignParentBottom="true"
		android:paddingLeft="4dip"
        android:paddingRight="4dip"
        android:paddingTop="8dip"
        android:paddingBottom="2dip">
         
	    <Button 
			android:id="@+id/toggle_button"
			android:layout_width="55dip"
			android:layout_height="fill_parent"
			android:layout_weight="1"
			android:text="@string/toggle_selected"
            android:layout_gravity="bottom"
            android:minHeight="90px"
			android:padding="6dp"
			android:textSize="16dp"/>
	     
	    <Button 
			android:id="@+id/upload_button" 
			android:layout_width="55dip" 
			android:layout_height="fill_parent"
			android:layout_weight="1"
			android:text="@string/upload_forms"
			android:layout_gravity="bottom"
			android:minHeight="90px"
			android:padding="6dp" 
			android:textSize="16dp" />
	</LinearLayout>
</LinearLayout>