<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentTop="true"
	android:padding="0dip">

    <LinearLayout
        android:id="@+id/searchholder"
        android:layout_height="70dip"
        android:layout_width="fill_parent"
        android:layout_alignParentTop="true"
        android:background="@drawable/search_holder_gradient"
        android:orientation="horizontal"
        android:paddingLeft="4dip"
        android:paddingRight="4dip"
        android:paddingTop="8dip"
        android:paddingBottom="2dip">

        <ImageButton
            android:id="@+id/barcode_button"
            android:layout_width="55dip"
            android:layout_height="fill_parent"
            android:src="@drawable/ic_btn_barcode"
            android:gravity="center"/>
        
        <EditText
            android:id="@+id/search_text"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:singleLine="true"
            android:hint="@string/search_hint"
            android:ellipsize="end"
            android:textSize="19sp"
            android:imeOptions="actionSearch|flagNoExtractUi"
			android:inputType="textFilter"/>
        
        <ImageButton
			android:id="@+id/search_patient"
			android:layout_width="55dip"
			android:layout_height="fill_parent"
			android:src="@drawable/ic_btn_search"
			android:gravity="center" />
		
		<ImageButton
			android:id="@+id/download_patients"
			android:layout_width="55dip"
			android:layout_height="fill_parent"
			android:src="@drawable/ic_menu_refresh"
			android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/patientholder"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:orientation="vertical" >

        <ListView
            android:id="@android:id/list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

        <TextView
            android:id="@android:id/empty"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/white"
            android:gravity="center"
            android:paddingLeft="17sp"
            android:paddingRight="17sp"
            android:text="@string/no_patients"
            android:textColor="@drawable/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonholder"
        android:layout_width="fill_parent"
        android:layout_height="70dip"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:paddingLeft="4dip"
        android:paddingRight="4dip"
        android:paddingTop="8dip"
        android:paddingBottom="2dip" >
        
        <Button
            android:id="@+id/create_patient"
            android:layout_width="55dip"
            android:layout_height="fill_parent"
            android:text="@string/new_patient"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:minHeight="90px"
            android:padding="6dp"
            android:textSize="16dp" />

        <Button
            android:id="@+id/filled_forms"
            android:layout_width="55dip"
            android:layout_height="fill_parent"
            android:text="@string/filled_forms"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:minHeight="90px"
            android:padding="6dp"
            android:textSize="16dp" />
    </LinearLayout>
</LinearLayout>